Update business layer with EmailClient